Digital/objects/Placement_Content_History__c.object
<CustomObject>
    <label>Placement Content History</label>
    <nameField>
        <displayFormat>PCH-{0000000000}</displayFormat>
        <label>Placement Content History No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Placement Content History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Category_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Category Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Content Type Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Carousel</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Dynamic</fullName>
                </value>
                <value>
                    <fullName>API Product feed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Image Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KOD_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KOD Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KOD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KOD</label>
        <referenceTo>KOD__c</referenceTo>
        <relationshipLabel>Placement Content History</relationshipLabel>
        <relationshipName>Placement_Content_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Layout_Type_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Layout Type Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Layout_Type__c</fullName>
        <label>Layout Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Link_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Link Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Main_Message_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main Message Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Message__c</fullName>
        <label>Main Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Non_Offer_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Offer Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Type_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offer Type Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_Type__c</fullName>
        <label>Offer_Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Non Offer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Placement_Content__c</fullName>
        <label>Placement Content</label>
        <referenceTo>Placement_Content__c</referenceTo>
        <relationshipLabel>Placement Content History</relationshipLabel>
        <relationshipName>Placement_Content_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Placement_type_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Placement type Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Placement_type__c</fullName>
        <label>Placement type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>banner</fullName>
                </value>
                <value>
                    <fullName>cue</fullName>
                </value>
                <value>
                    <fullName>Site Majority Offer</fullName>
                </value>
                <value>
                    <fullName>Floating Cue/Collection Cue</fullName>
                </value>
                <value>
                    <fullName>Collection Header</fullName>
                </value>
                <value>
                    <fullName>Stack Header</fullName>
                </value>
                <value>
                    <fullName>Product Page Header</fullName>
                </value>
                <value>
                    <fullName>OLCO</fullName>
                </value>
                <value>
                    <fullName>Offer Copy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Position Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shot_Number_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shot_Number Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shot_Number__c</fullName>
        <label>Shot_Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_Placements_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Placements Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Placements__c</fullName>
        <label>Site Placements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Collection Page Header</fullName>
                </value>
                <value>
                    <fullName>Floating Cue</fullName>
                </value>
                <value>
                    <fullName>Offer Spotlight</fullName>
                </value>
                <value>
                    <fullName>Product Page Header</fullName>
                </value>
                <value>
                    <fullName>Collection Header</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Style_Info_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Style_Info Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Style_Info__c</fullName>
        <label>Style_Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_No_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>S No Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S_No__c</fullName>
        <label>S No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>